--- a/public/index.html
+++ b/public/index.html
@@ -1,102 +1,137 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>CTF Challenge — Piecing Math to the Vault</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CTF Lucu-Lucu</title>
   <style>
-    :root {
-      --bg: #0b1221;
-      --card: #0b1726;
-      --accent: #2ea8ff;
-      --text: #dbefff;
-      --muted: #94b7d8;
-    }
     body {
-      margin: 0;
-      font-family: Inter, Roboto, "Segoe UI", system-ui, sans-serif;
-      background: linear-gradient(180deg,var(--bg),#021022);
-      color: var(--text);
+      font-family: "Comic Sans MS", cursive, sans-serif;
+      text-align: center;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      min-height: 100vh;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       justify-content: center;
-      height: 100vh;
-      padding: 1rem;
+      align-items: center;
     }
-    main.card {
-      background: var(--card);
-      padding: 2rem;
-      border-radius: 12px;
-      width: 100%;
-      max-width: 720px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+
+    h1 {
+      color: #fff;
+      text-shadow: 2px 2px #333;
+      margin-bottom: 20px;
+      animation: bounce 1.5s infinite;
     }
-    h1 { margin: 0 0 .5rem; color: var(--accent); font-size: 1.25rem; }
-    p { margin: .4rem 0; color: var(--muted); }
-    .actions { margin-top: 1rem; }
-    a.button {
-      display: inline-block;
-      padding: .6rem .9rem;
-      background: var(--accent);
-      color: #021022;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
-    .form-row { margin-top: 1.25rem; display:flex; gap:.5rem; }
-    input[type=text] {
-      flex: 1;
-      padding: .6rem;
-      border-radius: 8px;
-      border: 1px solid rgba(255,255,255,0.06);
-      background: rgba(255,255,255,0.02);
-      color: var(--text);
+
+    .container {
+      background: white;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      width: 90%;
+      max-width: 400px;
     }
-    button#submitBtn {
-      padding: .6rem .9rem;
-      border-radius: 8px;
+
+    input {
+      padding: 10px;
+      width: 80%;
+      border-radius: 10px;
+      border: 2px solid #ccc;
+      font-size: 16px;
+    }
+
+    button {
+      margin-top: 15px;
+      padding: 10px 20px;
       border: none;
-      background: #28d79a;
-      color: #002018;
-      font-weight: 600;
+      border-radius: 10px;
+      background: #ff4d6d;
+      color: white;
+      font-size: 16px;
       cursor: pointer;
+      transition: 0.3s;
     }
-    #message { margin-top: .75rem; color: var(--muted); }
+
+    button:hover {
+      background: #ff1e50;
+      transform: scale(1.05);
+    }
+
+    .alert {
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 10px;
+      font-weight: bold;
+      display: none;
+      animation: fade 0.5s ease-in-out;
+    }
+
+    .alert.success {
+      background: #4CAF50;
+      color: white;
+      box-shadow: 0 0 15px #4CAF50;
+      animation: shake 0.5s ease-in-out;
+    }
+
+    .alert.error {
+      background: #f44336;
+      color: white;
+      box-shadow: 0 0 15px #f44336;
+      animation: shake 0.5s ease-in-out;
+    }
+
+    @keyframes fade {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      75% { transform: translateX(5px); }
+    }
+
+    .watermark {
+      margin-top: 30px;
+      font-size: 14px;
+      color: #fff;
+      text-shadow: 1px 1px #000;
+      opacity: 0.8;
+    }
   </style>
 </head>
 <body>
-  <main class="card" role="main" aria-labelledby="title">
-    <h1 id="title">Piecing Math to the Vault</h1>
-    <p>Download file <code>kode.txt</code>, kerjakan soal di dalamnya, gabungkan hasil (sebagai ASCII) untuk membentuk path yang ingin diakses.</p>
+  <h1>🚀 Tebak FLAG mu kalau jago! 🤓</h1>
 
-    <div class="actions">
-      <a class="button" href="/kode.txt" download>Download kode.txt</a>
-    </div>
+  <div class="container">
+    <p>Clue: “Sesuatu yang kamu cari ada di balik tirai Inspect Element 🎭”</p>
+    <input type="text" id="flagInput" placeholder="Ketik FLAG kamu di sini...">
+    <br>
+    <button onclick="checkFlag()">Kirim Jawaban</button>
+    <div id="alertBox" class="alert"></div>
+  </div>
 
-    <div class="form-row" style="margin-top:1.25rem;">
-      <input id="flagInput" type="text" placeholder="Enter flag (format: ptz{...})" />
-      <button id="submitBtn" onclick="submitFlag()">Submit</button>
-    </div>
+  <div class="watermark">✨ dibuat oleh Poetra ✨</div>
 
-    <div id="message" role="status"></div>
-  </main>
-
+  <script src="flag.js"></script>
   <script>
-    async function submitFlag() {
-      const flag = document.getElementById("flagInput").value.trim();
-      const msg = document.getElementById("message");
-      if (!flag) { msg.textContent = "Please enter a flag."; return; }
+    function checkFlag() {
+      const input = document.getElementById("flagInput").value.trim();
+      const alertBox = document.getElementById("alertBox");
 
-      try {
-        const res = await fetch("/api/submit", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ flag })
-        });
-        const data = await res.json();
-        msg.textContent = data.message;
-      } catch (e) {
-        msg.textContent = "Submission failed. Try again later.";
+      if (input === FLAG) {
+        alertBox.textContent = "🎉 Yeay! Kamu berhasil menemukan FLAG! 🎉";
+        alertBox.className = "alert success";
+        alertBox.style.display = "block";
+      } else {
+        alertBox.textContent = "😝 Oops, salah bro! Coba lagi!";
+        alertBox.className = "alert error";
+        alertBox.style.display = "block";
       }
     }
   </script>
