--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CTF Lucu-Lucu</title>
+  <title>Apa nih?</title>
   <style>
     body {
       font-family: "Comic Sans MS", cursive, sans-serif;
@@ -106,7 +106,7 @@
   </style>
 </head>
 <body>
-  <h1>🚀 Tebak FLAG mu kalau jago! 🤓</h1>
+  <h1>🚀 Ada apa kira kira ya?? 🤓</h1>
 
   <div class="container">
     <p>Clue: “Sesuatu yang kamu cari ada di balik tirai Inspect Element 🎭”</p>
