--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>CTF Challenge — Piecing Math to the Vault</title>
+  <title>MathCTF? Tergantung niat</title>
   <style>
     :root {
       --bg: #0b1221;
@@ -133,7 +133,7 @@
 </head>
 <body>
   <main class="card" role="main" aria-labelledby="title">
-    <h1 id="title">🎲 Piecing Math to the Vault 🔐</h1>
+    <h1 id="title">🎲 Gabungin pola yang ada 🔐</h1>
     <p>Download file <code>kode.txt</code>, kerjain soal nya, terus hasilnya bikin jalur rahasia...</p>
 
     <div class="actions">
@@ -154,7 +154,7 @@
       const flag = document.getElementById("flagInput").value.trim();
       const msg = document.getElementById("message");
       if (!flag) {
-        msg.textContent = "⚠️ Masukin dulu dong flagnya!";
+        msg.textContent = "⚠️ Masukin dulu woi flagnya!";
         msg.className = "error";
         msg.style.display = "block";
         return;
