--- a/public/index.html
+++ b/public/index.html
@@ -170,9 +170,9 @@
         msg.textContent = data.message;
 
         if (data.success) {
-          msg.className = "success";
+          msg.className = "Mantap! Jago juga wkkwk!";
         } else {
-          msg.className = "error";
+          msg.className = "Yah salah. WKwkwk, tidur aja lebih enak";
         }
         msg.style.display = "block";
       } catch (e) {
