--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
         msg.textContent = data.message;
 
         if (data.success) {
-          msg.className = "success!";
+          msg.className = "success";
         } else {
           msg.className = "error";
         }
