--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     --accent: #2ea8ff;
     --text: #dbefff;
     --muted: #94b7d8;
-    --success: #3cffc9; /* lebih neon */
-    --error: #ff3366;   /* merah lebih ngejreng */
+    --success: #3cffc9; 
+    --error: #ff3366;   
   }
   body {
     margin: 0;
@@ -97,7 +97,7 @@
   }
   #message.success {
     background: var(--success);
-    color: #002018;
+    color: #3cffc9;
     animation: shake 0.6s;
     box-shadow: 0 0 20px rgba(60,255,201,0.8);
   }
